--- a/components/tags-input/tags-input.css
+++ b/components/tags-input/tags-input.css
@@ -42,6 +42,8 @@
 .tagsList {
   display: inline-block;
 
+  box-sizing: border-box;
+
   width: 100%;
   margin-bottom: -1px;
 
